--- a/VivonsExpos/app/src/main/AndroidManifest.xml
+++ b/VivonsExpos/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VivonsExpos">
+        <activity android:name=".MenuStaff"></activity>
+        <activity android:name=".MenuExposant"></activity>
+        <activity android:name=".MenuConnexion"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
