--- a/VivonsExpos/app/src/main/AndroidManifest.xml
+++ b/VivonsExpos/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".pageConnex"></activity>
+        <activity android:name=".validationInscription"></activity>
+        <activity android:name=".gestionSecteur"></activity>
+        <activity android:name=".affectationStand"></activity>
+        <activity android:name=".menuStaff"></activity>
+
     </application>
 
 </manifest>
