--- a/VivonsExpos/app/src/main/AndroidManifest.xml
+++ b/VivonsExpos/app/src/main/AndroidManifest.xml
@@ -12,9 +12,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VivonsExpos">
-        <activity android:name=".MenuStaff"></activity>
-        <activity android:name=".MenuExposant"></activity>
-        <activity android:name=".MenuConnexion"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MenuStaff"></activity>
+        <activity android:name=".MenuExposant"></activity>
+        <activity android:name=".MenuExposantMesStands"></activity>
+        <activity android:name=".MenuExposantModif"></activity>
+        <activity android:name=".MenuConnexion"></activity>
     </application>
 
 </manifest>
