--- a/VivonsExpos/app/src/main/AndroidManifest.xml
+++ b/VivonsExpos/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.vivonsexpos">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.VivonsExpos">
+        android:theme="@style/Theme.VivonsExpos"
+        android:networkSecurityConfig="@xml/network_security_config">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".pageConnex"/>
+
         <activity android:name=".validationInscription"/>
         <activity android:name=".gestionSecteur"/>
         <activity android:name=".affectationStand"/>
